Wed Jan  7 18:06:17 PST 1998 Manish Singh <yosh@gimp.org>

	* gtk/gtkentry.c:
	* gtk/gtkentry.h: applied patch to use a backing pixmap for
	drawing, which removes the bad flickering. (gtk-wille-980106-0)

Wed Jan  7 02:14:30 PST 1998 Manish Singh <yosh@gimp.org>

	* glib/glib.h
	* glib/glist.c
	* glib/gslist.c
	* glib/testglib.c: Added g_[s]list_insert_sorted function
	and appropriate tests in testglib

Tue Jan  6 17:07:29 1998  Owen Taylor  <owt1@cornell.edu>
	* gtk/gtkentry.c gtk/gtkentry.h gtk/testgtk.c : 
	   Fixed problem with deleting while text is selected.
	   Changed behavior so that motion keys remove selection.
	   Added new gtk_entry_select_region () call.

Sat Jan  3 20:23:25 1998  Owen Taylor  <owt1@cornell.edu>
	* glib/glib.h: Changed guint32 -> guint for bitfields. 
	  (Bitfields must be int or unsigned int?)

Sat Jan  3 15:39:45 PST 1998 Jay Painter <jpaint@serv.net>
	* gtk/testgtk.c: better CList test

Sat Jan  3 11:09:51 CST 1998 Shawn T. Amundson <amundson@gimp.org>

	* gtk/gtkscrolledwindow.c: initialize scrollbar_spacing
	  (gtk-fortier-980103-0)

Sat Jan  3 10:15:08 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* configure.in: fixed a typo (no_xext_lib, not no_ext_lib).

Sat Jan  3 00:41:28 PST 1998 Manish Singh <yosh@gimp.org>

	* gtk/gtkentry.c:
	* gtk/gtkentry.h: applied Gordon Matzigkeit's patch to add
	fixed-length entry fields (gtk_entry_new_with_max_length)
	
Fri Jay  2 23:52 PST 1998 Jay Painter <jpaint@serv.net>
	* reverted glibconfig.h and glib.h files back to the
	way they were before my ugly hack
	* gtk/gtkclist.c:
	* glib/gscanner.c: removed inlines from clist and gscanner

Fri Jan  2 23:55:24 CST 1998 Shawn T. Amundson <amundson@gimp.org>

	* Several portability fixes from Michael Callahan 
          <callahan@xmission.com> including adding in missing
 	  #includes and adding void in function prototypes.

Fri Jan  2 19:28:52 1988 Jay Painter <jpaint@serv.net>
	* gtk/gtkclist.h:
	* gtk/gtkclist.c:
	* gtk/gtk.h: