@@ -1,3 +1,9 @@
+1998-01-07  Elliot Lee  <sopwith@localhost.cs.cuc.edu>
+
+	* gtk/gtkcombobox.c gtk/gtkcombobox.h: New widget, GtkComboBox
+	* gdk/gdkwindow.c: Make gdk_window_init set the width &
+		height of gdk_root_parent
+
 Wed Jan  7 18:06:17 PST 1998 Manish Singh <yosh@gimp.org>
 
 	* gtk/gtkentry.c:
